--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Install Chocolatey
-  win_shell: 'Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))'
+  win_shell: "Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))"
     
-- name: Ensure notepad++ is installed using chocolatey
+- name: Ensure .NET Framework 4.7.1 is installed using chocolatey
   win_chocolatey:
     name: dotnet4.7.1
     state: present
