fail to config mysql server on windows

--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -18,11 +18,8 @@
     state: present
     enabled: yes
 
+- name: Setup mysql root password 
+  win_command: C:\tools\mysql\current\bin\mysqladmin -u root -p oldpassword mysql!234
+
 - name: Install MySQL as a windows service
   win_command: C:\tools\mysql\current\bin\mysqld --install
-
-- name: start mysql service 
-  win_service: 
-      name: MySQL
-      start_mode: auto
-      state: started
